# dozer

dozer-admin/: Cargo.toml
dozer-admin/src/services/: application_service.rs  connection_service.rs
dozer-api/src/: lib.rs
dozer-api/src/cache_builder/: log_reader.rs  mod.rs
dozer-cache/src/: errors.rs
dozer-ingestion/examples/: openai.rs
dozer-ingestion/oracle/: Cargo.toml
dozer-ingestion/oracle/examples/: .gitignore  stress.rs  stress.sample.yaml
dozer-ingestion/oracle/src/: lib.rs
dozer-ingestion/oracle/src/connector/: mod.rs
dozer-ingestion/oracle/src/connector/replicate/log/: listing.rs  mod.rs
dozer-ingestion/oracle/src/connector/replicate/log/redo/: log_miner.rs
dozer-ingestion/oracle/src/native/: client.rs  config.rs  mod.rs  server.rs
dozer-ingestion/src/: lib.rs
dozer-orchestrator/src/: errors.rs
dozer-orchestrator/src/pipeline/: builder.rs  log_sink.rs  mod.rs
dozer-orchestrator/src/simple/: executor.rs  orchestrator.rs
dozer-types/: Cargo.toml  build.rs
dozer-types/json_schema/: config-schema.json  config.yaml  connection-schema.json  generate.rs
dozer-types/protos/: admin.proto  cloud.proto  oracle.proto
dozer-types/src/: grpc_types.rs  ingestion_types.rs  lib.rs
dozer-types/src/models/: api_config.rs  api_endpoint.rs  api_security.rs  app_config.rs  connection.rs  flags.rs  ingestion_types.rs  source.rs  telemetry.rs
json_schemas/: dozer.json
