[package]
name = "dozer-ingestion-oracle"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dozer-ingestion-connector = { path = "../connector" }
oracle = { version = "0.5.7", features = ["chrono", "stmt_without_lifetime"] }
regex = "1.10.3"
serde = "1.0.197"
serde_json = { version = "1.0.108", features = ["arbitrary_precision"] }
tempdir = "0.3.7"
tower-http = { version = "0.4", features = ["full"] }
tonic-web = "0.11.0"
tonic-reflection = "0.11.0"
tokio-stream = { version = "0.1.12", features = ['sync'] }
h2 = { version = "0.4.4" }

[dev-dependencies]
env_logger = "0.11.1"
